--- a/Views/EditUser.xaml
+++ b/Views/EditUser.xaml
@@ -16,6 +16,7 @@
             <Label Content="Edit User"/>
             <TextBox Text="{Binding User.Name}" Width="150" HorizontalAlignment="Left"/>
             <TextBox Text="{Binding User.Email}" Width="150" HorizontalAlignment="Left"/>
+            <Button Content="Back" Width="100" HorizontalAlignment="Left" Margin="0,10,0,0" Style="{StaticResource BackBtn}" Command="{Binding CloseCommand}"/>
         </StackPanel>
     </Grid>
 </Page>
