Add Modify User Functionality

--- a/Views/EditUser.xaml
+++ b/Views/EditUser.xaml
@@ -14,8 +14,9 @@
     <Grid>
         <StackPanel>
             <Label Content="Edit User"/>
-            <TextBox Text="{Binding User.Name}" Width="150" HorizontalAlignment="Left"/>
-            <TextBox Text="{Binding User.Email}" Width="150" HorizontalAlignment="Left"/>
+            <TextBox Text="{Binding User.Name, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left"/>
+            <TextBox Text="{Binding User.Email, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left"/>
+            <Button Content="Save" Width="100" HorizontalAlignment="Left" Margin="0,10,0,0" Style="{StaticResource SaveBtn}" Command="{Binding SaveCommand}" />
             <Button Content="Back" Width="100" HorizontalAlignment="Left" Margin="0,10,0,0" Style="{StaticResource BackBtn}" Command="{Binding CloseCommand}"/>
         </StackPanel>
     </Grid>
