--- a/Views/AddUser.xaml
+++ b/Views/AddUser.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MVVMTest.Views.EditUser"
+﻿<Page x:Class="MVVMTest.Views.AddUser"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,31 +6,31 @@
       xmlns:local="clr-namespace:MVVMTest.Views"
       xmlns:localVM="clr-namespace:MVVMTest.ViewModel"
       mc:Ignorable="d" 
-      Style="{StaticResource PageBackground}"
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="EditUser">
-    
+      Style="{StaticResource PageBackground}"
+      Title="AddUser">
+
     <Page.DataContext>
-        <localVM:EditUserViewModel/>
+        <localVM:AddUserViewModel />
     </Page.DataContext>
-    
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100" />
+            <RowDefinition Height="130" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel>
-            <Label Content="Edit User"/>
+        <StackPanel Grid.Row="0">
+            <Label Content="Add User"/>
             <Separator />
-            <TextBox Text="{Binding User.Name, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left" Margin="0,10,0,10"/>
-            <TextBox Text="{Binding User.Email, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left"/>
+            <Label Content="Name" />
+            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left" Margin="0,0,0,0"/>
+            <Label Content="Email" />
+            <TextBox Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Top">
-            <Button Content="Save" Height="30" Width="100" HorizontalAlignment="Left" Margin="0,0,10,0" Style="{StaticResource BtnStyle}" Command="{Binding SaveCommand}" />
+            <Button Content="Save" Height="30" Width="100" HorizontalAlignment="Left" Margin="0,0,10,0" Style="{StaticResource BtnStyle}" Command="{Binding AddUserToListCommand}" />
             <Button Content="Back" Height="30" Width="100" HorizontalAlignment="Left" Margin="0,0,0,0" Style="{StaticResource BtnStyle}" Command="{Binding CloseCommand}"/>
         </StackPanel>
-
     </Grid>
-    
 </Page>
