--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -1,8 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="{x:Type Button}" x:Key="AddBtn">
-        <Setter Property="Background" Value="SteelBlue" />
-        <Setter Property="Foreground" Value="Black"/>
+    
+    <SolidColorBrush x:Key="AppBackgroundBrush" Color="AliceBlue" />
+    <SolidColorBrush x:Key="ButtonBackgroundBrush" Color="SteelBlue" />
+    <SolidColorBrush x:Key="TextColorBrush" Color="Black" />
+    
+    <Style TargetType="{x:Type Label}">
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+    
+    <Style TargetType="{x:Type Window}" x:Key="WindowBackground">
+        <Setter Property="Background" Value="{StaticResource AppBackgroundBrush}" />
+    </Style>
+    
+    <Style TargetType="{x:Type Page}" x:Key="PageBackground">
+        <Setter Property="Background" Value="{StaticResource AppBackgroundBrush}" />
+    </Style>
+    
+    <Style TargetType="{x:Type Button}" x:Key="BtnStyle">
+        <Setter Property="Background" Value="{StaticResource ButtonBackgroundBrush}" />
+        <Setter Property="Foreground" Value="{StaticResource TextColorBrush}"/>
         <Setter Property="FontSize" Value="16"/>
         <Style.Resources>
             <Style TargetType="Border">
@@ -10,45 +27,5 @@
             </Style>
         </Style.Resources>
     </Style>
-    <Style TargetType="{x:Type Button}" x:Key="DelBtn">
-        <Setter Property="Background" Value="IndianRed" />
-        <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="FontSize" Value="16"/>
-        <Style.Resources>
-            <Style TargetType="Border">
-                <Setter Property="CornerRadius" Value="3,3,3,3" />
-            </Style>
-        </Style.Resources>
-    </Style>
-    <Style TargetType="{x:Type Button}" x:Key="ModBtn">
-        <Setter Property="Background" Value="LightSeaGreen" />
-        <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="FontSize" Value="16"/>
-        <Style.Resources>
-            <Style TargetType="Border">
-                <Setter Property="CornerRadius" Value="3,3,3,3" />
-            </Style>
-        </Style.Resources>
-    </Style>
-    <Style TargetType="{x:Type Button}" x:Key="BackBtn">
-        <Setter Property="Background" Value="LightYellow" />
-        <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="FontSize" Value="16"/>
-        <Style.Resources>
-            <Style TargetType="Border">
-                <Setter Property="CornerRadius" Value="3,3,3,3" />
-            </Style>
-        </Style.Resources>
-    </Style>
-    <Style TargetType="{x:Type Button}" x:Key="SaveBtn">
-        <Setter Property="Background" Value="RosyBrown" />
-        <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="FontSize" Value="16"/>
-        <Style.Resources>
-            <Style TargetType="Border">
-                <Setter Property="CornerRadius" Value="3,3,3,3" />
-            </Style>
-        </Style.Resources>
-    </Style>
-
+    
 </ResourceDictionary>
