--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -10,7 +10,7 @@
         Title="MainWindow" Height="450" Width="800">
 
     <Window.DataContext>
-        <localVM:MainViewModel/>
+        <Binding Source="{StaticResource ViewModelLocator}" Path="MainViewModel"/>
     </Window.DataContext>
 
     <Grid>
