--- a/Views/EditUser.xaml
+++ b/Views/EditUser.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:MVVMTest.Views"
       xmlns:localVM="clr-namespace:MVVMTest.ViewModel"
       mc:Ignorable="d" 
-      Style="{StaticResource PageBackground}"
+      Style="{StaticResource PageStyle}"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="EditUser">
     
@@ -23,11 +23,11 @@
         <StackPanel>
             <Label Content="Edit User"/>
             <Separator />
-            <TextBox Text="{Binding User.Name, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left" Margin="0,10,0,10"/>
-            <TextBox Text="{Binding User.Email, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left"/>
+            <TextBox Text="{Binding User.Name, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left" Margin="10,10,0,10"/>
+            <TextBox Text="{Binding User.Email, UpdateSourceTrigger=PropertyChanged}" Width="150" HorizontalAlignment="Left" Margin="10,0,0,0"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Top">
-            <Button Content="Save" Height="30" Width="100" HorizontalAlignment="Left" Margin="0,0,10,0" Style="{StaticResource BtnStyle}" Command="{Binding SaveCommand}" />
+            <Button Content="Save" Height="30" Width="100" HorizontalAlignment="Left" Margin="10,0,10,0" Style="{StaticResource BtnStyle}" Command="{Binding SaveCommand}" />
             <Button Content="Back" Height="30" Width="100" HorizontalAlignment="Left" Margin="0,0,0,0" Style="{StaticResource BtnStyle}" Command="{Binding CloseCommand}"/>
         </StackPanel>
 
