--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -13,8 +13,30 @@
         <Setter Property="Background" Value="{StaticResource AppBackgroundBrush}" />
     </Style>
     
-    <Style TargetType="{x:Type Page}" x:Key="PageBackground">
+    <Style TargetType="{x:Type Page}" x:Key="PageStyle">
         <Setter Property="Background" Value="{StaticResource AppBackgroundBrush}" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="RenderTransform">
+            <Setter.Value>
+                <TranslateTransform X="-1000" />
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="Window.Loaded">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(TranslateTransform.X)"
+                                         From="-1000" To="0"
+                                         Duration="0:0:0.5"
+                                         AutoReverse="False">
+                            <DoubleAnimation.EasingFunction>
+                                <QuadraticEase EasingMode="EaseOut"/>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Style.Triggers>
     </Style>
     
     <Style TargetType="{x:Type Button}" x:Key="BtnStyle">
