--- a/Views/HomePage.xaml
+++ b/Views/HomePage.xaml
@@ -9,7 +9,7 @@
       Style="{StaticResource PageStyle}"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="HomePage">
-
+    <!-- Home Page View -->
     <Page.DataContext>
         <Binding Source="{StaticResource ViewModelLocator}" Path="HomePageViewModel" />
     </Page.DataContext>
