--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <!-- Styles for view elements -->
     <SolidColorBrush x:Key="AppBackgroundBrush" Color="AliceBlue" />
     <SolidColorBrush x:Key="ButtonBackgroundBrush" Color="SteelBlue" />
     <SolidColorBrush x:Key="TextColorBrush" Color="Black" />
