--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -13,6 +13,10 @@
         <Binding Source="{StaticResource ViewModelLocator}" Path="MainViewModel"/>
     </Window.DataContext>
 
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=txtPassword}" Key="Enter" />
+    </Window.InputBindings>
+
     <Grid>
 
         <Grid.RowDefinitions>
